--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
     "html-webpack-inline-svg-plugin": "^1.2.1",
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
