--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "path-alias-resolver": "^1.0.3-alpha",
+    "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
