--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "html-webpack-inline-svg-plugin": "^1.2.1",
+    "html-webpack-plugin": "^5.5.0",
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
+    "path": "^0.12.7",
     "path-alias-resolver": "^1.0.3-alpha",
     "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
