--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://prretam34.github.io/colston.github.io",
   "name": "frontend-col",
   "version": "0.1.0",
   "private": true,
@@ -26,6 +27,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "html-webpack-inline-svg-plugin": "^1.2.1",
     "html-webpack-plugin": "^5.5.0",
     "module-alias": "^2.2.2",
@@ -54,6 +56,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
