--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://prretam34.github.io/colston",
+  "homepage": "https://prretam34.github.io/colston-dev",
   "name": "frontend-col",
   "version": "0.1.0",
   "private": true,
